crates/agent/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_create.snap
---
source: crates/agent/src/discovers/specs.rs
expression: json!(out)
---
[
  {
    "bindings": [
      {
        "resource": {
          "stream": "foo"
        },
        "target": "acmeCo/my/foo"
      }
    ],
    "endpoint": {
      "connector": {
        "config": {
          "discovered": 1
        },
        "image": "new/image"
      }
    }
  },
  [
    {
      "documentSchema": {
        "const": "foo"
      },
      "keyPtrs": [
        "/foo-key"
      ],
      "recommendedName": "foo",
      "resourceSpec": {
        "stream": "foo"
      }
    }
  ]
]
