crates/agent/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_duplicate_bindings.snap
---
source: crates/agent/src/discovers/specs.rs
expression: out
---
(
    [
        Binding {
            target: Collection(
                "acmeCo/does-not-exist",
            ),
            document_schema: Schema(
                RawValue(
                    {"const":"discovered"},
                ),
            ),
            collection_key: [],
            resource_path: [
                "foo",
            ],
            disable: true,
        },
        Binding {
            target: Collection(
                "acmeCo/fooName2",
            ),
            document_schema: Schema(
                RawValue(
                    {"const":"discovered2"},
                ),
            ),
            collection_key: [],
            resource_path: [
                "foo",
            ],
            disable: true,
        },
    ],
    {
        [
            "foo",
        ]: Changed {
            target: Collection(
                "acmeCo/fooName2",
            ),
            disable: true,
        },
    },
    {},
)
