crates/agent/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_resource_paths_update.snap
---
source: crates/agent/src/discovers/specs.rs
expression: json!(out)
---
[
  {
    "bindings": [
      {
        "resource": {
          "modified": 1,
          "stream": "foo"
        },
        "target": "acmeCo/renamed"
      },
      {
        "resource": {
          "modified": 2,
          "namespace": "spacename",
          "stream": "foo"
        },
        "target": "acmeCo/renamed-namepaced"
      },
      {
        "disable": true,
        "resource": {
          "modified": "yup",
          "stream": "disabled"
        },
        "target": "test/collection/disabled"
      }
    ],
    "endpoint": {
      "connector": {
        "config": {
          "discovered": 1
        },
        "image": "new/image"
      }
    },
    "interval": "34s",
    "shards": {
      "maxTxnDuration": "12s"
    }
  },
  [
    {
      "documentSchema": {
        "const": "discovered"
      },
      "recommendedName": "suggested",
      "resourceConfig": {
        "modified": 0,
        "stream": "foo"
      }
    },
    {
      "documentSchema": {
        "const": "discovered-namepaced"
      },
      "recommendedName": "suggested2",
      "resourceConfig": {
        "modified": 0,
        "namespace": "spacename",
        "stream": "foo"
      }
    },
    {
      "documentSchema": false,
      "recommendedName": "other",
      "resourceConfig": {
        "modified": 0,
        "stream": "disabled"
      }
    }
  ]
]
