crates/agent/src/discovers/snapshots/agent__discovers__specs__tests__merge_collection.snap
---
source: crates/agent/src/discovers/specs.rs
expression: "serde_json::to_string_pretty(&out).unwrap()"
---
{
  "case/1": {
    "schema": {"const":42},
    "key": [
      "/foo",
      "/bar"
    ]
  },
  "case/2": {
    "schema": {"const":42},
    "key": [
      "/foo",
      "/bar"
    ],
    "projections": {
      "field": "/ptr"
    },
    "journals": {
      "fragments": {
        "length": 1234
      }
    },
    "derive": {
      "using": {
        "sqlite": {}
      },
      "transforms": []
    }
  },
  "case/3": {
    "schema": {"const":42},
    "key": [
      "/one",
      "/two"
    ]
  },
  "case/4": {
    "writeSchema": {"const":"write!"},
    "readSchema": {"const":"read!"},
    "key": [
      "/foo",
      "/bar"
    ]
  }
}
