crates/agent/src/discovers/snapshots/agent__discovers__specs__tests__response_parsing.snap
---
source: crates/agent/src/discovers/specs.rs
expression: json!(out)
---
[
  {
    "connector": {
      "config": {
        "some": "config"
      },
      "image": "ghcr.io/foo/bar/source-potato:v1.2.3"
    }
  },
  [
    {
      "documentSchema": {
        "properties": {
          "croak": {
            "type": "string"
          }
        },
        "required": [
          "croak"
        ],
        "type": "object"
      },
      "key": [
        "/croak"
      ],
      "recommendedName": "frogs",
      "resourceConfig": {
        "stream": "greetings",
        "syncMode": "incremental"
      }
    },
    {
      "documentSchema": {
        "properties": {
          "count": {
            "type": "integer"
          },
          "message": {
            "type": "string"
          }
        },
        "required": [
          "count",
          "message"
        ],
        "type": "object"
      },
      "key": [
        "/count"
      ],
      "recommendedName": "some_greetings",
      "resourceConfig": {
        "stream": "greetings",
        "syncMode": "incremental"
      }
    }
  ]
]
